--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@
                     <div class="contact-form">
                         <form>
                             <div class="form-row">
-                                <div class="form-group col-lg-6">
+                                <div class="form-group col-12">
                                     <label for="fullName">Full name *</label>
                                     <input type="text" class="form-control" placeholder="">
                                 </div>
 
-                                <div class="form-group col-lg-6">
+                                <div class="form-group col-12">
                                     <label for="email">Email *</label>
                                     <input type="email" class="form-control" placeholder="">
                                 </div>
 
-                                <div class="form-group col-sm-12">
+                                <div class="form-group col-12">
                                     <label for="message">Message *</label>
                                     <textarea class="form-control" placeholder=""></textarea>
                                 </div>
